# uv-audit

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: auditor.rs  cli.rs  extractor.rs  formatters.rs  main.rs  models.rs  service.rs  uv_cli.rs
src/service/: interface.rs  pypi.rs
test-data/: requirements.txt
