[package]
name = "uv-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
requirements-txt = { git = "https://github.com/astral-sh/uv.git", version = "0.0.1" }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
uv-client = { git = "https://github.com/astral-sh/uv.git", version = "0.0.1" }
pep508_rs = { git = "https://github.com/astral-sh/uv.git", version = "0.6.0" }
pypi-types = { git = "https://github.com/astral-sh/uv.git", version = "0.0.1" }
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
prettytable = "0.10.0"
