[package]
name = "uv-audit"
version = "1.0.0"
edition = "2021"
authors = ["Farid Yusifov"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
requirements-txt = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
uv-client = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
pep508_rs = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
pypi-types = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
prettytable = "0.10.0"
cyclonedx-bom = "0.6.2"
uuid = "1.10.0"
rand = "0.8.5"
uv-python = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
uv-cache = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
uv-installer = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
distribution-types = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
toml = "0.8.19"
uv-requirements = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
uv-configuration = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
uv-types = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
uv-resolver = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
uv-distribution = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
uv-build = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
uv-dispatch = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
platform-tags = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
uv-git = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }
install-wheel-rs = { git = "https://github.com/astral-sh/uv.git", rev = "615dda0e944f1daa65bbb8ee2f9d87a1fc914911" }

[patch.crates-io]
reqwest-middleware = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "21ceec9a5fd2e8d6f71c3ea2999078fecbd13cbe" }
reqwest-retry = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "21ceec9a5fd2e8d6f71c3ea2999078fecbd13cbe" }
