[package]
name = "uv-audit"
version = "1.2.0"
edition = "2021"
authors = ["Farid Yusifov"]
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
prettytable = "0.10.0"
cyclonedx-bom = "0.6.2"
uuid = "1.10.0"
rand = "0.8.5"
indicatif = "0.17.8"
